fix checkbox alignment in 0.9.10

--- a/src/modules/extensions/todoist.scss
+++ b/src/modules/extensions/todoist.scss
@@ -67,6 +67,7 @@
 .task-metadata {
   font-size: small;
   color: $indigo;
+  margin-left: 20px;
 }
 
 .task-metadata > * {
